db 연동